corrected index navbar hero z-index conflict

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -36,9 +36,7 @@ img{
   
 }
 
-.Logo{
-  background-color: transparent;
-}
+
 
 .btn1 {
   --bs-btn-padding-x: 0.75rem;
